# photo-service-gui

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  srt_streaming.md
.github/workflows/: deploy_webserver.yml  test.yml
docs/: 00_index.md  01_architecture_overview.md  02_c4_context.md  index.md
photo_service_gui/: app.py  gunicorn_config.py
photo_service_gui/config/: competition_format_individual_sprint.json  global_settings.json
photo_service_gui/files/: video_status.json
photo_service_gui/model/: album_model.py  changelog.py
photo_service_gui/services/: __init__.py  ai_image_service.py  ai_video_service.py  albums_adapter.py  competition_format_adapter.py  config_adapter.py  events_adapter.py  foto_service.py  google_cloud_storage_adapter.py  google_photos_adapter.py  google_pub_sub_adapter.py  live_stream_adapter.py  live_stream_service.py  photos_adapter.py  photos_file_adapter.py  service_instance_adapter.py  status_adapter.py  user_adapter.py  vision_ai_service.py
photo_service_gui/static/: styles.css  styles_kjelsaas.css  styles_lyn.css  styles_new.css  styles_print.css  styles_whitelabel.css  video_analytics.js
photo_service_gui/templates/: config.html  index.html  login.html  open_base.html  open_base_new.html  photo_push.html  photos.html  status.html  video_events.html
photo_service_gui/views/: __init__.py  config.py  liveness.py  login.py  logout.py  main.py  photo_push.py  photo_sync.py  photo_update.py  photos.py  photos_adm.py  photos_edit.py  pub_events.py  status.py  utils.py  video_events.py
tests/: conftest.py
tests/integration/: __init__.py  test_config_adapter.py  test_events_adapter.py  test_photos_adapter.py  test_ping.py  test_service_instance_adapter.py  test_status_adapter.py
